k8s/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/webnet: "true"
        io.kompose.service: webserver
    spec:
      containers:
        - image: winedup/hellowhale:foo2
          name: webserver
          ports:
            - containerPort: 80
          resources: {}
      hostname: webserver
      restartPolicy: Always
status: {}
