k8s/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: webserver
  name: webserver
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: webserver
  type: LoadBalancer
